@startuml
'https://plantuml.com/class-diagram

interface UserService
interface IService<User>
'entity User {
'-Id:Integer
'-no:String
'-name:String
'-password:String
'-age:Integer
'-sex:Integer
'-phone: String
'-roleId:Integer
'-isvalid:String
'}
UserService <|.. UserServiceImpl
interface UserService{
 pageC(IPage<User> page):IPage
 pageCC(IPage<User> page, Wrapper wrapper):IPage
 }
IService<|-- UserService
class UserServiceImpl{
    -UserMapper userMapper
    +pageC(IPage<User> page):IPage
    +pageCC(IPage<User> page, Wrapper wrapper): IPage
}



@enduml